services/player/src/player/grammar/GrammarParser.py
# Generated from Grammar.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GrammarParser ( Parser ):

    grammarFileName = "Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'gray'", "'left'", "'right'", 
                     "'middle'", "'image'", "'keyPress'", "'keyType'", "'keyCombo'", 
                     "'keyRelease'", "'mouseClick'", "'mouseDoubleClick'", 
                     "'mousePress'", "'mouseRelease'", "'mouseScroll'", 
                     "'wait'", "'text'", "'position'", "'regex'", "','", 
                     "';'", "'label'", "'use'", "'sequence'", "'detector'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "'='", 
                     "')'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "CONFIDENCE", "GRAY", "LEFT", "RIGHT", 
                      "MIDDLE", "IMAGE", "KEY_PRESS", "KEY_TYPE", "KEY_COMBO", 
                      "KEY_RELEASE", "MOUSE_CLICK", "MOUSE_DOUBLE_CLICK", 
                      "MOUSE_PRESS", "MOUSE_RELEASE", "MOUSE_SCROLL", "WAIT", 
                      "TEXT", "POSITION", "REGEX", "COMMA", "DCOMMA", "LABEL", 
                      "USE", "SEQUENCE", "DETECTOR", "ID", "STRING", "ESC", 
                      "ORPAR", "EQ", "CRPAR", "OCPAR", "CCPAR", "INT", "FLOAT", 
                      "WS" ]

    RULE_root = 0
    RULE_stmt = 1
    RULE_createDetector = 2
    RULE_useDetector = 3
    RULE_createAndUseDetector = 4
    RULE_createSelectorByPosition = 5
    RULE_createSelectorByLabel = 6
    RULE_createSelectorByText = 7
    RULE_createSelectorByRegex = 8
    RULE_createOperation = 9
    RULE_selector = 10
    RULE_selectorByLabel = 11
    RULE_selectorByText = 12
    RULE_selectorByRegex = 13
    RULE_selectorByPosition = 14
    RULE_selectorByImage = 15
    RULE_selectorOrder = 16
    RULE_createSequence = 17
    RULE_runOperation = 18
    RULE_operation = 19
    RULE_wait = 20
    RULE_waitSelector = 21
    RULE_mousePress = 22
    RULE_mousePressSelector = 23
    RULE_mouseClick = 24
    RULE_mouseClickSelector = 25
    RULE_mouseDoubleClick = 26
    RULE_mouseDoubleClickSelector = 27
    RULE_mouseRelease = 28
    RULE_mouseReleaseSelector = 29
    RULE_mouseScroll = 30
    RULE_mouseScrollSelector = 31
    RULE_keyCombo = 32
    RULE_keyComboSelector = 33
    RULE_keyPress = 34
    RULE_keyRelease = 35
    RULE_keyType = 36
    RULE_keyPressSelector = 37
    RULE_keyReleaseSelector = 38
    RULE_keyTypeSelector = 39
    RULE_mouseButton = 40
    RULE_number = 41

    ruleNames =  [ "root", "stmt", "createDetector", "useDetector", "createAndUseDetector", 
                   "createSelectorByPosition", "createSelectorByLabel", 
                   "createSelectorByText", "createSelectorByRegex", "createOperation", 
                   "selector", "selectorByLabel", "selectorByText", "selectorByRegex", 
                   "selectorByPosition", "selectorByImage", "selectorOrder", 
                   "createSequence", "runOperation", "operation", "wait", 
                   "waitSelector", "mousePress", "mousePressSelector", "mouseClick", 
                   "mouseClickSelector", "mouseDoubleClick", "mouseDoubleClickSelector", 
                   "mouseRelease", "mouseReleaseSelector", "mouseScroll", 
                   "mouseScrollSelector", "keyCombo", "keyComboSelector", 
                   "keyPress", "keyRelease", "keyType", "keyPressSelector", 
                   "keyReleaseSelector", "keyTypeSelector", "mouseButton", 
                   "number" ]

    EOF = Token.EOF
    CONFIDENCE=1
    GRAY=2
    LEFT=3
    RIGHT=4
    MIDDLE=5
    IMAGE=6
    KEY_PRESS=7
    KEY_TYPE=8
    KEY_COMBO=9
    KEY_RELEASE=10
    MOUSE_CLICK=11
    MOUSE_DOUBLE_CLICK=12
    MOUSE_PRESS=13
    MOUSE_RELEASE=14
    MOUSE_SCROLL=15
    WAIT=16
    TEXT=17
    POSITION=18
    REGEX=19
    COMMA=20
    DCOMMA=21
    LABEL=22
    USE=23
    SEQUENCE=24
    DETECTOR=25
    ID=26
    STRING=27
    ESC=28
    ORPAR=29
    EQ=30
    CRPAR=31
    OCPAR=32
    CCPAR=33
    INT=34
    FLOAT=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.StmtContext)
            else:
                return self.getTypedRuleContext(GrammarParser.StmtContext,i)


        def getRuleIndex(self):
            return GrammarParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = GrammarParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 75628416) != 0):
                self.state = 84
                self.stmt()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def createDetector(self):
            return self.getTypedRuleContext(GrammarParser.CreateDetectorContext,0)


        def createSelectorByLabel(self):
            return self.getTypedRuleContext(GrammarParser.CreateSelectorByLabelContext,0)


        def createSelectorByText(self):
            return self.getTypedRuleContext(GrammarParser.CreateSelectorByTextContext,0)


        def createSelectorByRegex(self):
            return self.getTypedRuleContext(GrammarParser.CreateSelectorByRegexContext,0)


        def createSelectorByPosition(self):
            return self.getTypedRuleContext(GrammarParser.CreateSelectorByPositionContext,0)


        def createOperation(self):
            return self.getTypedRuleContext(GrammarParser.CreateOperationContext,0)


        def createSequence(self):
            return self.getTypedRuleContext(GrammarParser.CreateSequenceContext,0)


        def runOperation(self):
            return self.getTypedRuleContext(GrammarParser.RunOperationContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = GrammarParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.createDetector()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.createSelectorByLabel()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.createSelectorByText()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 93
                self.createSelectorByRegex()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 94
                self.createSelectorByPosition()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 95
                self.createOperation()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 96
                self.createSequence()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 97
                self.runOperation()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateDetectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GrammarParser.ID, 0)

        def EQ(self):
            return self.getToken(GrammarParser.EQ, 0)

        def DETECTOR(self):
            return self.getToken(GrammarParser.DETECTOR, 0)

        def ORPAR(self):
            return self.getToken(GrammarParser.ORPAR, 0)

        def STRING(self):
            return self.getToken(GrammarParser.STRING, 0)

        def CRPAR(self):
            return self.getToken(GrammarParser.CRPAR, 0)

        def DCOMMA(self):
            return self.getToken(GrammarParser.DCOMMA, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_createDetector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateDetector" ):
                listener.enterCreateDetector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateDetector" ):
                listener.exitCreateDetector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateDetector" ):
                return visitor.visitCreateDetector(self)
            else:
                return visitor.visitChildren(self)




    def createDetector(self):

        localctx = GrammarParser.CreateDetectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_createDetector)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(GrammarParser.ID)
            self.state = 101
            self.match(GrammarParser.EQ)
            self.state = 102
            self.match(GrammarParser.DETECTOR)
            self.state = 103
            self.match(GrammarParser.ORPAR)
            self.state = 104
            self.match(GrammarParser.STRING)
            self.state = 105
            self.match(GrammarParser.CRPAR)
            self.state = 106
            self.match(GrammarParser.DCOMMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseDetectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USE(self):
            return self.getToken(GrammarParser.USE, 0)

        def ID(self):
            return self.getToken(GrammarParser.ID, 0)

        def DCOMMA(self):
            return self.getToken(GrammarParser.DCOMMA, 0)

        def ORPAR(self):
            return self.getToken(GrammarParser.ORPAR, 0)

        def FLOAT(self):
            return self.getToken(GrammarParser.FLOAT, 0)

        def CRPAR(self):
            return self.getToken(GrammarParser.CRPAR, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_useDetector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUseDetector" ):
                listener.enterUseDetector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUseDetector" ):
                listener.exitUseDetector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUseDetector" ):
                return visitor.visitUseDetector(self)
            else:
                return visitor.visitChildren(self)




    def useDetector(self):

        localctx = GrammarParser.UseDetectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_useDetector)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(GrammarParser.USE)
            self.state = 109
            self.match(GrammarParser.ID)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 110
                self.match(GrammarParser.ORPAR)
                self.state = 111
                self.match(GrammarParser.FLOAT)
                self.state = 112
                self.match(GrammarParser.CRPAR)


            self.state = 115
            self.match(GrammarParser.DCOMMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateAndUseDetectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USE(self):
            return self.getToken(GrammarParser.USE, 0)

        def ORPAR(self):
            return self.getToken(GrammarParser.ORPAR, 0)

        def STRING(self):
            return self.getToken(GrammarParser.STRING, 0)

        def CRPAR(self):
            return self.getToken(GrammarParser.CRPAR, 0)

        def DCOMMA(self):
            return self.getToken(GrammarParser.DCOMMA, 0)

        def COMMA(self):
            return self.getToken(GrammarParser.COMMA, 0)

        def FLOAT(self):
            return self.getToken(GrammarParser.FLOAT, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_createAndUseDetector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateAndUseDetector" ):
                listener.enterCreateAndUseDetector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateAndUseDetector" ):
                listener.exitCreateAndUseDetector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateAndUseDetector" ):
                return visitor.visitCreateAndUseDetector(self)
            else:
                return visitor.visitChildren(self)




    def createAndUseDetector(self):

        localctx = GrammarParser.CreateAndUseDetectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_createAndUseDetector)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(GrammarParser.USE)
            self.state = 118
            self.match(GrammarParser.ORPAR)
            self.state = 119
            self.match(GrammarParser.STRING)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 120
                self.match(GrammarParser.COMMA)
                self.state = 121
                self.match(GrammarParser.FLOAT)


            self.state = 124
            self.match(GrammarParser.CRPAR)
            self.state = 125
            self.match(GrammarParser.DCOMMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateSelectorByPositionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GrammarParser.ID, 0)

        def EQ(self):
            return self.getToken(GrammarParser.EQ, 0)

        def selectorByPosition(self):
            return self.getTypedRuleContext(GrammarParser.SelectorByPositionContext,0)


        def DCOMMA(self):
            return self.getToken(GrammarParser.DCOMMA, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_createSelectorByPosition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateSelectorByPosition" ):
                listener.enterCreateSelectorByPosition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateSelectorByPosition" ):
                listener.exitCreateSelectorByPosition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateSelectorByPosition" ):
                return visitor.visitCreateSelectorByPosition(self)
            else:
                return visitor.visitChildren(self)




    def createSelectorByPosition(self):

        localctx = GrammarParser.CreateSelectorByPositionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_createSelectorByPosition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(GrammarParser.ID)
            self.state = 128
            self.match(GrammarParser.EQ)
            self.state = 129
            self.selectorByPosition()
            self.state = 130
            self.match(GrammarParser.DCOMMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateSelectorByLabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GrammarParser.ID, 0)

        def EQ(self):
            return self.getToken(GrammarParser.EQ, 0)

        def selectorByLabel(self):
            return self.getTypedRuleContext(GrammarParser.SelectorByLabelContext,0)


        def DCOMMA(self):
            return self.getToken(GrammarParser.DCOMMA, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_createSelectorByLabel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateSelectorByLabel" ):
                listener.enterCreateSelectorByLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateSelectorByLabel" ):
                listener.exitCreateSelectorByLabel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateSelectorByLabel" ):
                return visitor.visitCreateSelectorByLabel(self)
            else:
                return visitor.visitChildren(self)




    def createSelectorByLabel(self):

        localctx = GrammarParser.CreateSelectorByLabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_createSelectorByLabel)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(GrammarParser.ID)
            self.state = 133
            self.match(GrammarParser.EQ)
            self.state = 134
            self.selectorByLabel()
            self.state = 135
            self.match(GrammarParser.DCOMMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateSelectorByTextContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GrammarParser.ID, 0)

        def EQ(self):
            return self.getToken(GrammarParser.EQ, 0)

        def selectorByText(self):
            return self.getTypedRuleContext(GrammarParser.SelectorByTextContext,0)


        def DCOMMA(self):
            return self.getToken(GrammarParser.DCOMMA, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_createSelectorByText

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateSelectorByText" ):
                listener.enterCreateSelectorByText(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateSelectorByText" ):
                listener.exitCreateSelectorByText(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateSelectorByText" ):
                return visitor.visitCreateSelectorByText(self)
            else:
                return visitor.visitChildren(self)




    def createSelectorByText(self):

        localctx = GrammarParser.CreateSelectorByTextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_createSelectorByText)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(GrammarParser.ID)
            self.state = 138
            self.match(GrammarParser.EQ)
            self.state = 139
            self.selectorByText()
            self.state = 140
            self.match(GrammarParser.DCOMMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateSelectorByRegexContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GrammarParser.ID, 0)

        def EQ(self):
            return self.getToken(GrammarParser.EQ, 0)

        def selectorByRegex(self):
            return self.getTypedRuleContext(GrammarParser.SelectorByRegexContext,0)


        def DCOMMA(self):
            return self.getToken(GrammarParser.DCOMMA, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_createSelectorByRegex

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateSelectorByRegex" ):
                listener.enterCreateSelectorByRegex(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateSelectorByRegex" ):
                listener.exitCreateSelectorByRegex(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateSelectorByRegex" ):
                return visitor.visitCreateSelectorByRegex(self)
            else:
                return visitor.visitChildren(self)




    def createSelectorByRegex(self):

        localctx = GrammarParser.CreateSelectorByRegexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_createSelectorByRegex)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(GrammarParser.ID)
            self.state = 143
            self.match(GrammarParser.EQ)
            self.state = 144
            self.selectorByRegex()
            self.state = 145
            self.match(GrammarParser.DCOMMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateOperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GrammarParser.ID, 0)

        def EQ(self):
            return self.getToken(GrammarParser.EQ, 0)

        def operation(self):
            return self.getTypedRuleContext(GrammarParser.OperationContext,0)


        def DCOMMA(self):
            return self.getToken(GrammarParser.DCOMMA, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_createOperation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateOperation" ):
                listener.enterCreateOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateOperation" ):
                listener.exitCreateOperation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateOperation" ):
                return visitor.visitCreateOperation(self)
            else:
                return visitor.visitChildren(self)




    def createOperation(self):

        localctx = GrammarParser.CreateOperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_createOperation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(GrammarParser.ID)
            self.state = 148
            self.match(GrammarParser.EQ)
            self.state = 149
            self.operation()
            self.state = 150
            self.match(GrammarParser.DCOMMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectorByLabel(self):
            return self.getTypedRuleContext(GrammarParser.SelectorByLabelContext,0)


        def selectorByText(self):
            return self.getTypedRuleContext(GrammarParser.SelectorByTextContext,0)


        def selectorByRegex(self):
            return self.getTypedRuleContext(GrammarParser.SelectorByRegexContext,0)


        def selectorByPosition(self):
            return self.getTypedRuleContext(GrammarParser.SelectorByPositionContext,0)


        def selectorByImage(self):
            return self.getTypedRuleContext(GrammarParser.SelectorByImageContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_selector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelector" ):
                listener.enterSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelector" ):
                listener.exitSelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelector" ):
                return visitor.visitSelector(self)
            else:
                return visitor.visitChildren(self)




    def selector(self):

        localctx = GrammarParser.SelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_selector)
        try:
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.selectorByLabel()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.selectorByText()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 3)
                self.state = 154
                self.selectorByRegex()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 4)
                self.state = 155
                self.selectorByPosition()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 5)
                self.state = 156
                self.selectorByImage()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectorByLabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LABEL(self):
            return self.getToken(GrammarParser.LABEL, 0)

        def ORPAR(self):
            return self.getToken(GrammarParser.ORPAR, 0)

        def STRING(self):
            return self.getToken(GrammarParser.STRING, 0)

        def CRPAR(self):
            return self.getToken(GrammarParser.CRPAR, 0)

        def COMMA(self):
            return self.getToken(GrammarParser.COMMA, 0)

        def selectorOrder(self):
            return self.getTypedRuleContext(GrammarParser.SelectorOrderContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_selectorByLabel
